2008-04-21  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Moved bottom() from ScopeChain to ScopeChainNode, simplifying it based
        on the knowledge that the ScopeChain is never empty.

        SunSpider reports no change.

2008-04-21  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Moved begin() and end() from ScopeChain to ScopeChainNode. 
        
        Also marked a few methods "const".

        SunSpider reports no change.
        
2008-04-21  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej Stachowiak.
        
        Turned ScopeChain::depth into a stand-alone function, and simplified it
        a bit. 
        
        I also moved ScopeChain::depth to Machine.cpp because it doesn't report
        the true depth of the ScopeChain -- just the Machine's perspective of
        its depth within a given call frame.

        SunSpider reports no change.
        
2008-04-21  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej Stachowiak.
        
        Removed indirection in ScopeChain::ref / ScopeChain::deref.
        
        SunSpider reports no change.
        
        * kjs/scope_chain.h:
        (KJS::ScopeChain::ScopeChain):
        (KJS::ScopeChain::~ScopeChain):
        (KJS::ScopeChain::clear):

2008-04-21  Oliver Hunt  <oliver@apple.com>

        Reviewed by NOBODY(Build fix)

        Fix debug build

        * kjs/nodes.cpp:
        (KJS::ConstDeclNode::evaluateSingle):

2008-04-21  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Oliver.

        Bug 18664: SQUIRRELFISH: correctly throw a SyntaxError when parsing of eval code fails
        <https://bugs.webkit.org/show_bug.cgi?id=18664>

        Correctly throw a SyntaxError when parsing of eval code fails.

        * VM/Machine.cpp:
        (KJS::eval):

2008-04-21  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff.
